sass/app.scss
.error {
	color: red;
	background-color: bisque;
	padding: 4px*0.75 4px 4px*0.75 4px;
	border: 1px;
	border-radius: 4px;
	border-color: red;
	border-style: solid;
	margin: 5px;
	display: none;
}

.selected {
	background: #ffaaaa
}

.highlighted {
	border: 2px #88ff88;
}

.slot {
	display: inline-block;
	border: solid 1px #dddddd;
	margin-top: 5px;
	margin-bottom: 5px;
}

.card {
	display: inline-block;
}

.card-overlap {
	display: inline-block;
	margin-right: -50px;
}

.ui {
	font-size: large;
}

.ui input {
	font-size: large;
}

.ui button {
	font-size: large;
}

